--- a/PYTHON_FUNDAMENTALS_2.ipynb
+++ b/PYTHON_FUNDAMENTALS_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZpup65TUbcEfg+B4QvLEx",
+      "authorship_tag": "ABX9TyOXx3nzBlUNzSaz9cHPmRVA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -317,7 +317,7 @@
         },
         "outputId": "834b898d-8102-45c0-deb1-c6533192ba6c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,8 +350,7 @@
         "  else:\n",
         "    print('still incorrect')\n",
         "else:\n",
-        "  print('invalid credentials')\n",
-        ""
+        "  print('invalid credentials')\n"
       ],
       "metadata": {
         "colab": {
@@ -360,7 +359,7 @@
         "id": "CQhwznvUmtNb",
         "outputId": "c634339a-c516-4248-dc59-c0e24c752b72"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -427,7 +426,7 @@
         "id": "b3j8K0U-s-ZZ",
         "outputId": "1dcefb81-876c-4529-c3ac-0a1addcb517e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,7 +466,7 @@
         "id": "Fa7GbVqx8x8n",
         "outputId": "66d22329-135e-4ea9-ff69-f3808adb2c1f"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,7 +504,7 @@
         "id": "wqIoZbtH9f0N",
         "outputId": "ac8a0860-14a3-4ac6-8241-c20fa5997255"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,7 +567,7 @@
         "id": "IZidxvoI9-vu",
         "outputId": "5c587af9-d016-4801-b0cc-5c14a6b147da"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -629,7 +628,7 @@
         "id": "QnP_vn1AGqxH",
         "outputId": "540c9b75-a438-4cde-a04c-04c9302d2c6f"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,7 +670,7 @@
         "id": "IKrDoxbVJtMz",
         "outputId": "abe15735-8e6a-4c3e-fcb5-705a5d49014d"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,7 +709,7 @@
         "id": "sOL-2H_vRP5z",
         "outputId": "2d7b6afe-6d4d-4cb8-f52b-d50e98c49b0d"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,8 +747,7 @@
         "  guess = int(input('GUESS THE NUMBER '))\n",
         "  counter += 1\n",
         "else:\n",
-        "  print('YOU GUESSED IT RIGHT IN',counter,'ATTEMPTS')\n",
-        ""
+        "  print('YOU GUESSED IT RIGHT IN',counter,'ATTEMPTS')\n"
       ],
       "metadata": {
         "colab": {
@@ -758,7 +756,7 @@
         "id": "28d_kR-pT5ni",
         "outputId": "84905e5b-023b-4e87-c70e-cb15102c5296"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -799,7 +797,7 @@
         "id": "2eGwVchMcFOZ",
         "outputId": "1ea9ba6e-e399-4704-c4a7-5c0964be1bd4"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -844,7 +842,7 @@
         "current_pop = 10000\n",
         "for i in range(10,0,-1):\n",
         "  print(i,current_pop)\n",
-        "  current_pop = current_pop - 0.1*current_pop\n"
+        "  current_pop = current_pop/1.1\n"
       ],
       "metadata": {
         "colab": {
@@ -853,7 +851,7 @@
         "id": "D0_5xYjueHvA",
         "outputId": "4c90b493-7f08-4b79-df56-52e0f5fb4f6f"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
