--- a/PYTHON_FUNDAMENTALS_2.ipynb
+++ b/PYTHON_FUNDAMENTALS_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXx3nzBlUNzSaz9cHPmRVA",
+      "authorship_tag": "ABX9TyPYEY0LaoxE+m3p9LfKABqf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -842,7 +842,7 @@
         "current_pop = 10000\n",
         "for i in range(10,0,-1):\n",
         "  print(i,current_pop)\n",
-        "  current_pop = current_pop/1.1\n"
+        "  current_pop = current_pop - 0.1*current_pop\n"
       ],
       "metadata": {
         "colab": {
@@ -870,6 +870,211 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input('ENTER THE NUMBER: '))\n",
+        "result = 0\n",
+        "fact = 1\n",
+        "for i in range(1,n+1):\n",
+        "  fact = fact * i\n",
+        "  result = result + i/fact\n",
+        "print(result)\n"
+      ],
+      "metadata": {
+        "id": "W3YVf1GUzy3_",
+        "outputId": "575749cc-b746-4b39-e73e-8e640f724c8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ENTER THE NUMBER: 5\n",
+            "2.708333333333333\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5.NESTED LOOPS\n"
+      ],
+      "metadata": {
+        "id": "g4AbEowe8lTT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1,5):\n",
+        "  for j in range(1,5):\n",
+        "    print (i,j)\n"
+      ],
+      "metadata": {
+        "id": "dSZ863Wv8k0n",
+        "outputId": "7ec9691d-e4ea-45bb-e697-e5a0ca02b693",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 1\n",
+            "1 2\n",
+            "1 3\n",
+            "1 4\n",
+            "2 1\n",
+            "2 2\n",
+            "2 3\n",
+            "2 4\n",
+            "3 1\n",
+            "3 2\n",
+            "3 3\n",
+            "3 4\n",
+            "4 1\n",
+            "4 2\n",
+            "4 3\n",
+            "4 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "row = int(input('ENTER THE NUMBER of rows: '))\n",
+        "\n",
+        "for i in range(1, row + 1):\n",
+        "    for j in range(1, i + 1):\n",
+        "        print('*', end='')\n",
+        "    print()  # Move to the next line after each row\n"
+      ],
+      "metadata": {
+        "id": "NUoM-K0x_HK0",
+        "outputId": "e792ecbc-59db-4527-c76c-65ad928f6b82",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ENTER THE NUMBER of rows: 5\n",
+            "*\n",
+            "**\n",
+            "***\n",
+            "****\n",
+            "*****\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "LOOP CONTROL STATEMENTS"
+      ],
+      "metadata": {
+        "id": "hX2Y0CC9L1wx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# BREAK\n",
+        "for i in range(1,11):\n",
+        "  if i == 6:\n",
+        "    break\n",
+        "  print(i)\n",
+        "# CONTINUE\n",
+        "# PASS"
+      ],
+      "metadata": {
+        "id": "QFI-3goNAgG0",
+        "outputId": "294c542d-9a44-430f-d79e-82432a15301c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lower = int(input('ENTER THE LOWER RANGE: '))\n",
+        "upper = int(input('ENTER THE UPPER RANGE: '))\n",
+        "\n",
+        "for i in range(lower,upper+1):\n",
+        "  if i > 1:\n",
+        "    for j in range(2,i):\n",
+        "      if i % j == 0:\n",
+        "        break\n",
+        "    else:\n",
+        "      print(i)"
+      ],
+      "metadata": {
+        "id": "t4DeYsqpPVVa",
+        "outputId": "5dbcda4b-aa92-4a40-ee59-7861333a485c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ENTER THE LOWER RANGE: 10\n",
+            "ENTER THE UPPER RANGE: 20\n",
+            "11\n",
+            "13\n",
+            "17\n",
+            "19\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Continue statement skips the code and move on\n",
+        "for i in range(1,11):\n",
+        "  continue\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "d3RBV-o9j6Lg"
+      },
+      "execution_count": 2,
+      "outputs": []
     }
   ]
 }
