--- a/session_3_task.ipynb
+++ b/session_3_task.ipynb
@@ -50,8 +50,7 @@
         "for i in range(num,0,-1):\n",
         "  for j in range(i,0,-1):\n",
         "    print(j,end=' ')\n",
-        "  print()\n",
-        ""
+        "  print()\n"
       ],
       "metadata": {
         "id": "I_rywD-UFTkY",
@@ -60,7 +59,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +118,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +172,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +222,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +354,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,7 +412,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +474,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,7 +525,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -582,7 +581,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,7 +637,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,7 +689,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,7 +747,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -797,7 +796,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -866,7 +865,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -937,7 +936,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1005,7 +1004,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1079,7 +1078,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1127,7 +1126,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1135,6 +1134,288 @@
           "text": [
             "Enter a string: ssoban\n",
             "String after removing duplicates: soban\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "FIND THE LENGTH OF A GIVEN STRING WITHOUT USING THE LEN FUNCTION"
+      ],
+      "metadata": {
+        "id": "Krmu1CxnI_u1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = input('ENTER THE STRING: ')\n",
+        "count = 0\n",
+        "\n",
+        "for i in s:\n",
+        "    count += 1\n",
+        "\n",
+        "print(\"Length of the string:\", count)"
+      ],
+      "metadata": {
+        "id": "tgkoJCA6JJNV",
+        "outputId": "8c88d8bd-f24d-46b4-cc08-e240473cf48a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ENTER THE STRING: soban ali awan\n",
+            "Length of the string: 14\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "EXTRACT THE USERNAME FROM THE EMAIL AND PRINT IT"
+      ],
+      "metadata": {
+        "id": "8VPlliGVJxOX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = input('ENTER YOUR EMAIL: ')\n",
+        "pos = s.index('@')\n",
+        "print(s[0:pos])"
+      ],
+      "metadata": {
+        "id": "9Cc0_VXMKfdd",
+        "outputId": "8e6d68e6-dd17-4652-ec97-a9669e3f95ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ENTER YOUR EMAIL: soubanaliawan@gmail.com\n",
+            "soubanaliawan\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "COUNT THE FREQUENCY OF THE PARTICULAR CHARACTER IN THE STRING PROVIDED BY THE USER"
+      ],
+      "metadata": {
+        "id": "nS421nJ7LQ8F"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = input('ENTER THE STRING: ')\n",
+        "char = input('ENTER THE CHARACTER YOU WANT TO SEARCH: ')\n",
+        "\n",
+        "count = 0\n",
+        "for i in s:\n",
+        "  if i == char:\n",
+        "    count += 1\n",
+        "\n",
+        "print('THE FREQUENCY OF',char,'is: ',count)"
+      ],
+      "metadata": {
+        "id": "aTC7Sp0VLbZv",
+        "outputId": "51baffb0-d13c-4573-8e59-05347ba56281",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ENTER THE STRING: soubanaliawan\n",
+            "ENTER THE CHARACTER YOU WANT TO SEARCH: a\n",
+            "THE FREQUENCY OF a is:  4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Write a programme which can remove a particular character from the string"
+      ],
+      "metadata": {
+        "id": "9FTnGP79MwFN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = input('ENTER THE STRING: ')\n",
+        "term = input('ENTER THE CHARACTER YOU WANT TO REMOVE: ')\n",
+        "\n",
+        "result = ''\n",
+        "for i in s:\n",
+        "  if i != term:\n",
+        "    result = result + i\n",
+        "\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "id": "nuJP06ssM4It",
+        "outputId": "09ed23af-8c64-4863-b36c-ae9855582c12",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ENTER THE STRING: soban ali awan \n",
+            "ENTER THE CHARACTER YOU WANT TO REMOVE: a\n",
+            "sobn li wn \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Write a programme to check if the given string is palindrome or not"
+      ],
+      "metadata": {
+        "id": "89oWmP9M14Vc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = input('Enter the string: ')\n",
+        "\n",
+        "if s == s[::-1]:\n",
+        "  print('The given string is a palindrome')\n",
+        "else:\n",
+        "  print('The given string is not a palindrome')"
+      ],
+      "metadata": {
+        "id": "dLuIzBDkOyzs",
+        "outputId": "300ae383-2df2-4946-cbea-869c081f149b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the string: aba\n",
+            "The given string is a palindrome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Write a programme that  count the number of words in a string without a split function"
+      ],
+      "metadata": {
+        "id": "jqZjIfX73HJV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = input(\"Enter a sentence: \")\n",
+        "\n",
+        "count = 0\n",
+        "i = 0\n",
+        "\n",
+        "while i < len(text):\n",
+        "    if text[i] != ' ':\n",
+        "        count += 1\n",
+        "        while i < len(text) and text[i] != ' ':\n",
+        "            i += 1\n",
+        "    else:\n",
+        "        i += 1\n",
+        "\n",
+        "print(\"Number of words:\", count)\n"
+      ],
+      "metadata": {
+        "id": "tG1JFHsG3FLe",
+        "outputId": "f52131d7-b241-47a5-c648-c20313b59436",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a sentence: hello hi how are you\n",
+            "Number of words: 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Write a programme that will convert an integer into a string"
+      ],
+      "metadata": {
+        "id": "iKFCx92X5xPz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "# Convert to string\n",
+        "text = str(num)\n",
+        "\n",
+        "print(\"Converted string:\", text)\n",
+        "print(\"Type after conversion:\", type(text))\n"
+      ],
+      "metadata": {
+        "id": "1E0rQhjH521n",
+        "outputId": "a6be1472-351a-4e55-d153-a7c3df366783",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 123\n",
+            "Converted string: 123\n",
+            "Type after conversion: <class 'str'>\n"
           ]
         }
       ]
